VGCA-38 Переход маппера на Mapstruct